refactor (*) Update main layout ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Barcode_Scanner</string>
+    <string name="str_nothing_to_read">Nothing to read.</string>
 </resources>
